# aura

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CHRONICLES.md  CLAUDE.md  CRYPTO_INTEGRATION_SUMMARY.md  CRYPTO_QUICKSTART.md  DEPLOYMENT_FIXES.md  HEALTH_CHECK_IMPLEMENTATION.md  HEALTH_ENDPOINTS_QUICK_REFERENCE.md  HIVE_STATE.md  Makefile  README.md  TELEMETRY.md  agent_identity.py  agent_sim.py  autonomous_buyer.py  buf.gen.yaml  compose.yml  llms.txt  pyproject.toml  search_sim.py  test_health_endpoints.py  test_security.py  test_telemetry.py  test_telemetry_comprehensive.py
.github/workflows/: bee-keeper.yaml  ci-cd.yaml
adapters/mcp-server/: MISTRAL_VIBE_INTEGRATION.md  PR_SUMMARY.md  README.md  enhanced_server.py  mock_mcp.py  pyproject.toml  server.py  test_enhanced.py  test_integration.py  test_server.py
adapters/mcp-server/aura_mcp/: main.py  server.py
adapters/telegram-bot/: Dockerfile  README.md  pyproject.toml
adapters/telegram-bot/src/: bot.py  client.py  config.py  handlers.py  interfaces.py  main.py  states.py
adapters/telegram-bot/src/hive/: aggregator.py  connector.py  dna.py  generator.py  metabolism.py  transformer.py
adapters/telegram-bot/src/proto/aura/negotiation/v1/: negotiation_pb2.py  negotiation_pb2.pyi  negotiation_pb2_grpc.py
adapters/telegram-bot/tests/: conftest.py  test_bot.py
agents/bee-keeper/: README.md  hive-manifest.yaml  main.py  pyproject.toml
agents/bee-keeper/src/: aggregator.py  config.py  connector.py  dna.py  generator.py  metabolism.py  transformer.py
agents/bee-keeper/src/hive/proteins/: gh_client.py
api-gateway/: Dockerfile
api-gateway/src/: config.py  health.py  logging_config.py  main.py  security.py  telemetry.py
api-gateway/src/proto/aura/negotiation/v1/: negotiation_pb2.py  negotiation_pb2.pyi  negotiation_pb2_grpc.py
core-service/: Dockerfile  test_dspy_integration.py  test_dspy_simple.py  test_json_parsing.py  test_minimal_dspy.py  train_dspy.py
core-service/data/: negotiation_training.json
core-service/migrations/: env.py
core-service/migrations/versions/: 001_add_locked_deals.py  77450f9e9330_add_vector_extension.py  ea82989ed431_initial_migration_inventory_tables.py
core-service/src/: aura_brain.json  config.py  db.py  embeddings.py  llm_strategy.py  logging_config.py  main.py  monitor.py  seed.py  telemetry.py
core-service/src/config/: __init__.py  crypto.py  database.py  llm.py  logic.py  policy.py  server.py
core-service/src/crypto/: __init__.py  encryption.py  interfaces.py  pricing.py  solana_provider.py
core-service/src/guard/: membrane.py
core-service/src/hive/: aggregator.py  connector.py  dna.py  generator.py  membrane.py  metabolism.py  transformer.py  types.py
core-service/src/llm/: __init__.py  dspy_strategy.py  engine.py  signatures.py  strategy.py
core-service/src/llm/prepare/: clean.py
core-service/src/prompts/: __init__.py  negotiation.md  system.md
core-service/src/proto/aura/negotiation/v1/: negotiation_pb2.py  negotiation_pb2.pyi  negotiation_pb2_grpc.py
core-service/src/services/: __init__.py  market.py
core-service/tests/: __init__.py  conftest.py  test_aggregator_healing.py  test_hive.py  test_litellm_strategy.py  test_membrane.py  test_membrane_unit.py  test_mistral_strategy.py  test_rule_based_strategy.py
deploy/: prometheus.yml
deploy/aura/: Chart.yaml  tunnel.yaml  values.yaml
deploy/aura/templates/: core-deployment.yaml  core-service.yaml  frontend.yaml  frp-secret.yaml  gateway-deployment.yaml  gateway-service.yaml  infra-db.yaml  infra-jaeger.yaml  infra-nats.yaml  secrets.yaml  telegram-deployment.yaml  tunnel.yaml
deploy/workers/: interactive_worker.ipynb
docs/: AISYNC_VISION.md  API_SPECIFICATION.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  HEALTH_ENDPOINTS_QUICK_REFERENCE.md  SECURITY.md  TELEMETRY.md
frontend/: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  env.d.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json
frontend/docs/: BRAND_GUIDELINES.md  BRAND_IMPLEMENTATION.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentConsole.tsx  JITRenderer.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx
frontend/src/lib/: agent-wallet.ts
frontend/src/lib/aura/negotiation/v1/: negotiation_pb.ts
proto/aura/negotiation/v1/: negotiation.proto
scripts/: bee_keeper.py  bee_keeper_agent.py
scripts/bee_keeper/: aggregator.py  config.py  connector.py  generator.py  metabolism.py  transformer.py
src/prompts/: bee_keeper.md
tests/: test_health_endpoints.py  test_security.py
